--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
             <name>Aspose Java API</name>
             <url>https://repository.aspose.com/repo/</url>
         </repository>
+        <repository>
+            <id>swt-repo</id>
+            <url>http://maven-eclipse.github.io/maven</url>
+        </repository>
       </repositories>
     <build>
         <sourceDirectory>src/java</sourceDirectory>
@@ -52,8 +56,13 @@
  <dependency>
     <groupId>com.aspose</groupId>
     <artifactId>aspose-3d</artifactId>
-    <version>19.3</version>
+    <version>19.4</version>
 </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.swt</groupId>
+            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+            <version>4.6.1</version>
+        </dependency>
     </dependencies>
 </project>
